Quick fix to make nav links more readable.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,7 +56,7 @@ body {
 h2 {
   font-weight: 800;
 }
- 
+
 //= = = = = = = = = = = = = = = = = = /
 // - NAVIGATION BAR STYLES           /
 //= = = = = = = = = = = = = = = = = /
@@ -64,6 +64,10 @@ h2 {
 nav {
   box-shadow: none !important;
   background-color: rgba(0, 0, 0, 0) !important;
+
+  ul a {
+    color: #000 !important;
+  }
 }
 
 .nav-wrapper {
@@ -71,7 +75,7 @@ nav {
 }
 
 .brand-logo {
-  color: #fff !important; 
+  color: #fff !important;
   background-color: #000;
   padding-right: 20px !important;
 }
